--- a/.github/workflows/qqreads.yml
+++ b/.github/workflows/qqreads.yml
@@ -35,7 +35,8 @@ jobs:
       - name: '运行 【企鹅读书】'
         if: env.QQREAD_TIMEHD
         run: |
-          node qqreads.js
+          cd ~/JavaScript
+          node Task/qqreads.js
         env:
           
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
